fix: Fix the button variant `success` color in dark mode (#9043)

--- a/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
@@ -52,7 +52,7 @@ button {
   }
 
   &.success {
-    @apply bg-[#44ce4b] text-white dark:text-white;
+    @apply bg-[#44ce4b] dark:bg-[#44ce4b] text-white dark:text-white;
   }
 
   &.secondary {
